    - simplify rm_rf_children_dangerous function;
    - rename path_strv_canonicalize_absolute functions;
    - do not strip /dev prefix twice;
    - treat fuse.sshfs as a network filesystem;
    - refuse considering UID 0xFFFF and 0xFFFFFFFF valid;
    - return -ENXIO for -1 uids in parse_uid function;
    - check home path is absolute;
    - update arch macros;
    - add is_localhost function;
 * tmpfiles:
    - allow following symlinks for w lines;
    - create directories already with the right label;
    - do not fail when copying an empty directory;
    - make sure "C" doesn't copy anything if the destination already exists;
    - copy/link /usr/share/factory/ files when the source argument is omitted;
 * pc:
    - export $libdir in the .pc file;
    - expose more drop-in dirs in the .pc file;
    - no longer expose exec_prefix in .pc file;
 * po:
    - add German translation;
 * man:
    - update info for kernel-command-line;
    - fix sd_watchdog_enabled function prototype;
    - add file-hierarchy man page;
    - drop references to manual StandardError=syslog from daemon(7);
    - beef up systemd-fsck description;
    - mention that x-systemd.device-timeout is only for fstab;
    - mention x-initrd.mount option in fstab options list;
  * tests:
    - add tests to test-util;
    - add tests to test-strv;
    - add tests to test-path-util;
    - add test-conf-files test;
    - add test-capability test;
    - add test-async test;
    - add tests to test-fdset;
    - add tests to test-unit-name;
    - add test-ratelimit test;
    - add missing XDG_RUNTIME_DIR env variable;
 * build;
    - fix conftest.c to work on arm;
    - make sure to test for -Wflag instead of -Wno-flag;
    - properly quote m4 macro arguments in CC_CHECK_FLAGS_APPEND;
    - replace nm with $(NM);
    - add -pthread flag for libsystemd-shared;
    - avoid gcc warning about format for readahead;
    - do not run coverage if build failed;
    - add explicit support for --disable-nls;